# django_site_config

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
example/: db.sqlite3
example/example/: settings.py  urls.py  views.py  wsgi.py
example/example/app1/: __init__.py  urls.py  views.py
example/example/app1/templates/app1/: index.html
example/example/app_bar/: __init__.py  urls.py  views.py
example/example/app_bar/templates/app_bar/: index.html
example/example/app_foo/: __init__.py  urls.py  views.py
example/example/app_foo/templates/app_foo/: index.html
example/example/templates/: base.html  index.html
example/example/templates/stjoe/app_bar/: index.html
example/example/templates/stjoe/app_foo/: index.html
site_config/: __init__.py  choices.py  context_processors.py  decorators.py  forms.py  registry.py  settings.py  utils.py
site_config/backends/: __init__.py
site_config/backends/model_backend/: __init__.py  admin.py  forms.py  models.py
site_config/backends/settings_backend/: __init__.py
site_config/templates/admin/site_config/application/: change_form.html
site_config/templates/admin/site_config/website/: change_form.html
site_config/templates/site_config/: curtained.html
site_config/tests/: lib.py  test_basic_usage.py  test_config_register.py  test_context_processors.py  test_decorators.py  test_modelbackend_admin.py  test_modelbackend_basic_usage.py  test_settingsbackend_basic_usage.py  test_utils.py  utils.py
